--- a/src/main/resources/oscar_mcmaster.properties
+++ b/src/main/resources/oscar_mcmaster.properties
@@ -378,7 +378,7 @@ faxLogo =
 faxIdentifier = zwf4t%8*9@s
 faxURI = https://67.69.12.117:14043/OSCARFaxWebService
 faxKeystore = /root/oscarFax/oscarFax.keystore
-
+FAX_URL=http://192.168.1.151/avantfax
 # Patient status options
 inactive_statuses = 'IN','DE','IC','ID','MO','FI'
 
