modify the url to access labportal

--- a/src/main/resources/oscar_mcmaster.properties
+++ b/src/main/resources/oscar_mcmaster.properties
@@ -934,7 +934,7 @@ eyeform_expandAllDocuments=false
 LAB_SETUP_ENABLE=false
 
 # URL for the labportal only
-LabportalURL=http://192.168.1.104:8080/labPortal/
+LabportalURL=http://192.168.1.104:8080/oscargo/labPortal/index.jsp
 
 # if yes then it will display import new demographic option in search demo screens.
 # for sunny brook hospital requirement
