change forum_user->forumviewer_username and forum_password->forumviewer_password

--- a/src/main/resources/oscar_mcmaster.properties
+++ b/src/main/resources/oscar_mcmaster.properties
@@ -904,10 +904,10 @@ OHIP_FILE_LINE_LEN_BYTES=79
 
 ## enable or disable the forum view link in the encounter page
 FORUMVIEWER_LINK_ENABLE=false
-# zeiss forum's user name
-forum_user=oscar
-# zeiss forum's user's password
-forum_password=oscar2013
+# zeiss forumviewer user name
+forumviewer_username=oscar
+# zeiss forumviewer user's password
+forumviewer_password=oscar2013
 
 # SmartFax setting for faxing
 #if this is true and multisite=on then site's fax number will be considered, otherwise provider's fax number will be considered
