added scheduler job for importing sunny brook demographic periodically

--- a/src/main/resources/oscar_mcmaster.properties
+++ b/src/main/resources/oscar_mcmaster.properties
@@ -936,9 +936,25 @@ LAB_SETUP_ENABLE=false
 # URL for the labportal only
 LabportalURL=http://192.168.1.104:8080/oscargo/labPortal/index.jsp
 
+########### for sunny brook demo import : start ##################
+
 # if yes then it will display import new demographic option in search demo screens.
 # for sunny brook hospital requirement
 SUNNY_BROOK_DEMOGRAPHIC_IMPORT=no
+
+# load sunny brook demo import job
+# ModuleNames=SBDI
+
+# job interval (in milliseconds) for periodically running the job for importing demo from specified folder
+# 5 mins = 300000 , 2 mins = 120000, 12 hours = 43200000
+SUNNY_BROOK_DEMO_IMPORT_JOB_INTERVAL=43200000
+
+# folder location from which to read demo import txt files
+# once import is done for txt file, it will be moved to "SUNNY_BROOK_DEMO_IMPORT_SOURCE_FOLDER/success" directory
+# or in case of error it will be moved to "SUNNY_BROOK_DEMO_IMPORT_SOURCE_FOLDER/error" directory
+SUNNY_BROOK_DEMO_IMPORT_SOURCE_FOLDER=E:/oscarservice/other_files/sunny brook/demo_import_source_dir
+
+########### for sunny brook demo import : end ##################
 
 ar2005_enhance=true
 
