--- a/src/main/resources/oscar_mcmaster.properties
+++ b/src/main/resources/oscar_mcmaster.properties
@@ -27,17 +27,17 @@ buildtag=${build.JOB_NAME}-${build.BUILD_NUMBER}
 ## Mysql connection
 
 # mysql database name
-db_name = oscar_mcmaster
+db_name = oscar_snapshot
 
 # username
 db_username = root
 
 # password for the username above
-db_password = liyi
+db_password = lySin@mANa84
 
 db_type = mysql
 db_driver = com.mysql.jdbc.Driver
-db_uri = jdbc:mysql:///
+db_uri = jdbc:mysql://192.168.1.188:3306/
 
 
 
