--- a/pom.xml
+++ b/pom.xml
@@ -133,6 +133,11 @@
 			<version>2.1.0.RELEASE</version>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework.integration</groupId>
+			<artifactId>spring-integration-sftp</artifactId>
+			<version>2.2.5.RELEASE</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-aspects</artifactId>
 			<version>2.5.5</version>
@@ -524,11 +529,12 @@
 			<version>0.12-DRAFT</version>
 		</dependency>
 
-		<!-- FOR BORN18MWBV Project - Rourke, NDDS, 18M Summary in XML format -->
+		<!-- FOR BORN
+WBV Project - Rourke, NDDS, 18M Summary in XML format -->
 		<dependency>
 			<groupId>ca.bornontario</groupId>
 			<artifactId>x18MEWBV</artifactId>
-			<version>1.6.2</version>
+			<version>1.6.3</version>
 		</dependency>
 
 		<dependency>
