Feature: support customized invoice letter head picture

--- a/src/main/resources/oscar_mcmaster.properties
+++ b/src/main/resources/oscar_mcmaster.properties
@@ -957,3 +957,8 @@ eformPortal_enable=false
 eformPortal_ws_url=http://192.168.1.107:8080/eformPortal/
 # eform image temporary directory
 eformPortal_tmp_dir=/opt/portal_dir
+
+#invoice head logo switch
+invoice_head_logo_enable=false
+#invoice head logo image
+invoice_head_logo_image=clinic_letter_head.png
