Feature: use doc type to select invoice hean logo file

--- a/src/main/resources/oscar_mcmaster.properties
+++ b/src/main/resources/oscar_mcmaster.properties
@@ -960,5 +960,5 @@ eformPortal_tmp_dir=/opt/portal_dir
 
 #invoice head logo switch
 invoice_head_logo_enable=false
-#invoice head logo image
-invoice_head_logo_image=clinic_letter_head.png
+#invoice head logo image doc type
+invoice_head_logo_doctype=clinic_letter_head.png
