Feature: use logo img if exists; if no logo image and multisites isn't on, show clinic info; if no logo image and multisites is on show site info

--- a/src/main/resources/oscar_mcmaster.properties
+++ b/src/main/resources/oscar_mcmaster.properties
@@ -958,7 +958,5 @@ eformPortal_ws_url=http://192.168.1.107:8080/eformPortal/
 # eform image temporary directory
 eformPortal_tmp_dir=/opt/portal_dir
 
-#invoice head logo switch
-invoice_head_logo_enable=false
 #invoice head logo image doc type
-invoice_head_logo_doctype=clinic_letter_head.png
+invoice_head_logo_doctype=invoice letter head
